fix button mobile spacing

--- a/style.css
+++ b/style.css
@@ -89,6 +89,7 @@ li{
 
     .column-1 img{
         display: block;
+        margin-top: 40px;
         margin-left: auto;
         margin-right: auto;
         width: 50%;
